test/test_cases/invalid/syntaxErr/variables/reservedWords6.wacc
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  bool newpair = true
end
